feat:27.05.21 - features of micro added
